add interpolation option

--- a/www/index.html
+++ b/www/index.html
@@ -21,6 +21,7 @@
 		<script src="lib/file-saver/FileSaver.min.js"></script>
 		<script src="js/third-party/url.js"></script>
 		<script src="js/third-party/zui.js"></script>
+		<script src="js/line-interpolate.js"></script>
 		<script src="js/turtleShepherd.js"></script>
 		<script src="js/app.js"></script>
 
@@ -83,8 +84,8 @@
 					class="ts-jump mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">flight_takeoff</i>
 				</button>
-				<button id="ts-interpolate" title="INTERPOLATE" disabled
-					class="mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
+				<button title="INTERPOLATE"
+					class="ts-interpolate mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">linear_scale</i>
 				</button>
 				<button title="BACKGROUND IMAGE"
