add/annotate shortcuts

--- a/www/index.html
+++ b/www/index.html
@@ -76,31 +76,31 @@
 			<footer>&nbsp;</footer>
 
 			<div class="bottom-nav">
-				<button title="CLEARSCREEN"
+				<button title="CLEARSCREEN [C]"
 					class="ts-clear mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-button--raised mdl-js-ripple-effect">
 				  <i class="material-icons">delete</i>
 				</button>
-				<button title="ADD JUMP STITCH"
+				<button title="ADD JUMP STITCH [J]"
 					class="ts-jump mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">flight_takeoff</i>
 				</button>
-				<button title="INTERPOLATE"
+				<button title="INTERPOLATE [I]"
 					class="ts-interpolate mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">linear_scale</i>
 				</button>
-				<button title="BACKGROUND IMAGE"
+				<button title="BACKGROUND IMAGE [B]"
 					class="ts-image mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">photo</i>
 				</button>
-				<button title="TOGGLE GRID"
+				<button title="TOGGLE GRID [G]"
 					class="ts-grid mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">grid_off</i>
 				</button>
-				<button title="DOWNLOAD"
+				<button title="SAVE [S]"
 					class="ts-save mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">file_download</i>
 				</button>
-				<button title="UNDO"
+				<button title="UNDO [CTRL-Z]"
 					class="ts-undo mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 				  <i class="material-icons">undo</i>
 				</button>
