--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,9 @@
 		<!-- main custom styles -->
 		<link rel="stylesheet" href="css/app.css" >
 
+		<!-- cordova -->
+		<script src="cordova.js" type="text/javascript"></script>
+
 		<!-- js libraries -->
 		<script src="lib/material-design-lite/material.min.js"></script>
 		<script src="lib/jquery/dist/jquery.min.js"></script>
