mv turtleShepherd.js to  bower components.

--- a/www/index.html
+++ b/www/index.html
@@ -22,10 +22,11 @@
 		<script src="lib/jquery/dist/jquery.min.js"></script>
 		<script src="lib/two.js/build/two.min.js"></script>
 		<script src="lib/file-saver/FileSaver.min.js"></script>
+		<script src="lib/turtleshepherd.js/turtleShepherd.js"></script>
+
 		<script src="js/third-party/url.js"></script>
 		<script src="js/third-party/zui.js"></script>
 		<script src="js/line-interpolate.js"></script>
-		<script src="js/turtleShepherd.js"></script>
 		<script src="js/app.js"></script>
 
 	</head>
