--- a/www/index.html
+++ b/www/index.html
@@ -8,10 +8,11 @@
 
 		<!-- material -->
 		<link rel="stylesheet" href="lib/material-design-lite/material.min.css">
-		<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-orange.min.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-		<link rel="stylesheet" type="text/css" href="lib/dialog-polyfill/dialog-polyfill.css" />
+		<link rel="stylesheet" href="lib/roboto-and-material-icons-fonts/css/roboto.min.css">
+		<link rel="stylesheet" href="lib/roboto-and-material-icons-fonts/css/material-icons.min.css">
+		<link rel="stylesheet" href="lib/dialog-polyfill/dialog-polyfill.css" />
 		<!-- main custom styles -->
+		<link rel="stylesheet" href="css/material.blue_grey-orange.min.css" />
 		<link rel="stylesheet" href="css/app.css" >
 
 		<!-- cordova -->
