add a first simple pinch zoom

--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,9 @@
 		<script src="lib/material-design-lite/material.min.js"></script>
 		<script src="lib/jquery/dist/jquery.min.js"></script>
 		<script src="lib/two.js/build/two.min.js"></script>
+		<script src="lib/hammerjs/hammer.min.js"></script>
+		<script src="lib/jquery-hammerjs/jquery.hammer.js"></script>
+
 		<script src="lib/file-saver/FileSaver.min.js"></script>
 		<script src="lib/turtleshepherd.js/turtleShepherd.js"></script>
 
@@ -44,6 +47,7 @@
 						<a class="ts-about mdl-navigation__link" href="#">ABOUT</a>
 					</nav>
 
+					<!--
 					<button id="demo-menu-lower-right"
 							class="mdl-button mdl-js-button mdl-button--icon">
 					  <i class="material-icons">more_vert</i>
@@ -55,7 +59,7 @@
 					  <li class="ts-image mdl-menu__item">Background ..</li>
 					  <li class="ts-about  mdl-menu__item">About</li>
 					</ul>
-
+					-->
 				</div>
 			</header>
 
