adding zoom buttons

--- a/www/index.html
+++ b/www/index.html
@@ -115,6 +115,18 @@
 				</button>
 		  </div>
 
+		  <div class="top-nav">
+		  	<button title="ZOOM IN"
+		  		class="ts-zoom-in mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-button--raised mdl-js-ripple-effect">
+		  	  <i class="material-icons">zoom_in</i>
+		  	</button>
+		  	<button title="ZOOM OUT"
+		  		class="ts-zoom-out  mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
+		  	  <i class="material-icons">zoom_out</i>
+		  	</button>
+
+		  </div>
+
 		</div>
 
 
