add source link to about

--- a/www/index.html
+++ b/www/index.html
@@ -264,9 +264,9 @@
 				<p>Stitchpad 0.1</p>
 				<p>A sketch block for drawing simple embroidery graphics</p>
 				<p>Stitchpad is developed by <a href="http://www.stitchcode.com">Stichcode</a>
-				and  <a href="http://www.turtlestitch.org">Turtlestitch</a></p>
-				<p>Copyright &copy; Michael Aschauer, 2017</p>
-			</div>
+				and  <a href="http://www.turtlestitch.org">Turtlestitch</a>.<br />
+				The source code bcan be found on <a href="https://github.com/backface/Stitchpad">github</a></p>
+				<p>Copyright &copy; 2017, <a href="http://m.ash.to">Michael Aschauer</a></p></div>
 			<div class="mdl-dialog__actions">
 			  <button type="button" class="mdl-button" id="ts-about-close">Close</button>
 			</div>
