add versions with grunt-bump

--- a/www/index.html
+++ b/www/index.html
@@ -261,7 +261,7 @@
 		<dialog id="ts-about-dialog" class="mdl-dialog" style="min-width:30%">
 			<h4 class="mdl-dialog__title">About Stitchpad</h4>
 			<div class="mdl-dialog__content">
-				<p>Stitchpad 0.1</p>
+				<p>Stitchpad version: 0.0.1</p>
 				<p>A sketch block for drawing simple embroidery graphics</p>
 				<p>Stitchpad is developed by <a href="http://www.stitchcode.com">Stichcode</a>
 				and  <a href="http://www.turtlestitch.org">Turtlestitch</a>.<br />
