--- a/www/index.html
+++ b/www/index.html
@@ -6,6 +6,9 @@
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<title>Stitchpad.io</title>
 
+		<!--[if IE]><link rel="shortcut icon" href="./favicon.ico"><![endif]-->
+		<link rel="icon" href="./favicon.png">
+
 		<!-- material -->
 		<link rel="stylesheet" href="lib/material-design-lite/material.min.css">
 		<link rel="stylesheet" href="lib/roboto-and-material-icons-fonts/css/roboto.min.css">
