--- a/www/index.html
+++ b/www/index.html
@@ -125,6 +125,10 @@
 		  		class="ts-zoom-in mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-button--raised mdl-js-ripple-effect">
 		  	  <i class="material-icons">zoom_in</i>
 		  	</button>
+			<button title="RESET VIEW"
+		  		class="ts-reset-view  mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
+		  	  <i class="material-icons">center_focus_weak</i>
+		  	</button>
 		  	<button title="ZOOM OUT"
 		  		class="ts-zoom-out  mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
 		  	  <i class="material-icons">zoom_out</i>
