--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,8 @@
 		<link rel="stylesheet" href="lib/roboto-and-material-icons-fonts/css/roboto.min.css">
 		<link rel="stylesheet" href="lib/roboto-and-material-icons-fonts/css/material-icons.min.css">
 		<link rel="stylesheet" href="lib/dialog-polyfill/dialog-polyfill.css" />
+		<link rel="stylesheet" href="lib/icomoon_stitchpad/icomoon_stitchpad.css" />
+		
 		<!-- main custom styles -->
 		<link rel="stylesheet" href="css/material.blue_grey-orange.min.css" />
 		<link rel="stylesheet" href="css/app.css" >
@@ -67,7 +69,7 @@
 			</header>
 
 			<div class="mdl-layout__drawer">
-				<span class="mdl-layout-title">Stitchpad</span>
+				<span class="mdl-layout-title"><i class="icon-fingerstitch"></i> Stitchpad</span>
 				<nav class="mdl-navigation">
 					<a class="ts-clear mdl-navigation__link" href="#">New/Clear</a>
 					<a class="ts-save mdl-navigation__link" href="#">Save as..</a>
@@ -96,15 +98,15 @@
 			-->
 				<button title="ADD JUMP STITCH [J]"
 					class="ts-jump mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
-				  <i class="material-icons">flight_takeoff</i>
+				  <span class="icon-jump"></span>
 				</button>
 				<button title="INTERPOLATE [I]"
 					class="ts-interpolate mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
-				  <i class="material-icons">linear_scale</i>
+				  <i class="icon-stitch"></i>
 				</button>
 				<button title="BACKGROUND IMAGE [B]"
 					class="ts-image mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
-				  <i class="material-icons">photo</i>
+				  <i class="icon-picture"></i>
 				</button>
 				<button title="TOGGLE GRID [G]"
 					class="ts-grid mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
@@ -112,26 +114,26 @@
 				</button>
 				<button title="SAVE [S]"
 					class="ts-save mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
-				  <i class="material-icons">file_download</i>
+				  <i class="icon-save"></i>
 				</button>
 				<button title="UNDO [CTRL-Z]"
 					class="ts-undo mdl-button mdl-js-button mdl-button--primary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
-				  <i class="material-icons">undo</i>
+				  <i class="icon-undo"></i>
 				</button>
 		  </div>
 
 		  <div class="top-nav">
 		  	<button title="ZOOM IN"
 		  		class="ts-zoom-in mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-button--raised mdl-js-ripple-effect">
-		  	  <i class="material-icons">zoom_in</i>
+		  	  <i class="icon-zoomin"></i>
 		  	</button>
 			<button title="RESET VIEW"
 		  		class="ts-reset-view  mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
-		  	  <i class="material-icons">center_focus_weak</i>
+		  	  <i class="icon-center"></i>
 		  	</button>
 		  	<button title="ZOOM OUT"
 		  		class="ts-zoom-out  mdl-button mdl-js-button mdl-button--secondary mdl-button--fab mdl-button--mini-fab mdl-js-ripple-effect">
-		  	  <i class="material-icons">zoom_out</i>
+		  	  <i class="icon-zoomout"></i>
 		  	</button>
 
 		  </div>
