add import menu entry

--- a/www/index.html
+++ b/www/index.html
@@ -74,6 +74,7 @@
 				<nav class="mdl-navigation">
 					<a class="ts-clear mdl-navigation__link" href="#">New/Clear</a>
 					<a class="ts-save mdl-navigation__link" href="#">Save as..</a>
+          <a class="ts-import mdl-navigation__link" href="#">Import DST..</a>
 					<a class="ts-image mdl-navigation__link" href="#">Background ..</a>
 					<a class="ts-about mdl-navigation__link" href="#">About</a>
 				</nav>
@@ -329,6 +330,8 @@
 				}
 			});
 		</script>
+    
+    <input id="file_import" type="file" style="display: none" />
 
 	</body>
 </html>
