--- a/www/index.html
+++ b/www/index.html
@@ -281,7 +281,7 @@
 				<p>A sketch block for drawing simple embroidery graphics</p>
 				<p>Stitchpad is developed by <a href="http://www.stitchcode.com">Stichcode</a>
 					and <a href="http://www.turtlestitch.org">Turtlestitch</a></p>
-				<p>Copyright &copy; 2017, <a href="http://m.ash.to">Michael Aschauer</a></p></div>
+				<p>Copyright &copy; 2017-2020, <a href="http://m.ash.to">Michael Aschauer</a></p></div>
 			<div class="mdl-dialog__actions">
 			  <button type="button" class="mdl-button" id="ts-about-close">Close</button>
 			</div>
